--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
 baseURL = "http://htaidirt.com/"
 languageCode = "en-us"
 title = "Personal blog for Hassen Taidirt"
+theme = ["github.com/nodejh/hugo-theme-mini"]
+
