--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,7 +15,7 @@ minify:
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: Hassen Taidirt
-  description: "MLOps & AI Alchimist"
+  description: "Here I dump my thoughts on AI, Machine Learning, Ops, Engineering and more."
   keywords: [Blog, AI, Machine Learning, Ops, Engineering]
   author: Hassen
   # images: ["<link or path of image for opengraph, twitter-cards>"]
@@ -49,7 +49,7 @@ params:
     # safari_pinned_tab: "<link / abs url>"
 
   label:
-    text: "Hassen"
+    text: "Hassen.io"
     icon: /apple-touch-icon.png
     iconHeight: 35
 
@@ -70,8 +70,8 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "Hi there \U0001F44B"
-    Content: Welcome to my blog
+    Title: "\U0001F44B Hi there, I'm Hassen"
+    Content: Welcome to my personal blog. Here I dump my thoughts on AI, Machine Learning, Ops, Engineering and more. I hope you find something useful here. Enjoy your stay!
 
   socialIcons:
     - name: x
